# zennist

./: .clang-format  .clang-tidy  .gitignore  README.adoc  meson.build  meson_options.txt  package-lock.json
.github/workflows/: lint.yaml  test.yaml
assets/desk/: desk.gltf
assets/desk_without_icons/: desk.gltf
assets/roof/: zennist_roof.gltf
assets/wallpapers/: meson.build
include/: stb_image_write.h
pch/: pch.h
protocol/: meson.build
shaders/: default.vert  floor.frag  floor.vert  gltf.vert  gltf_color.frag  gltf_texture.frag  icon.frag  icon.vert  landscape.frag  meson.build  sky.frag
src/: config.cc  config.h  cuboid.h  desk.cc  desk.h  floor-edge.cc  floor-edge.h  floor.cc  floor.h  icon-background.cc  icon-background.h  icon.cc  icon.h  jpeg-texture.cc  jpeg-texture.h  landscape.cc  landscape.h  launcher_icons.cc  launcher_icons.h  log.cc  log.h  main.cc  meson.build  png-texture.cc  png-texture.h  roof.cc  roof.h  simple-object.cc  simple-object.h  sphere.cc  sphere.h  svg-texture.cc  svg-texture.h  texture-factory.cc  texture-factory.h  texture.h  viewer.cc  viewer.h
zennist/: application.cc  application.h  config.cc  config.h  main.cc  meson.build  monitor.cc  monitor.h  xr-system.cc  xr-system.h
zennist/css/: footer.css  main.css
zennist/ui/: footer.cc  footer.h  wallpaper.cc  wallpaper.h  xr-system-button.cc  xr-system-button.h
zrr/: meson.build
zrr/include/zrr/: error.h  result.h  zrr.h
zrr/src/: error.cc
