_sources = [
  '../include/tiny_gltf.cc',
  'landscape.cc',
  'sphere.cc',
  'floor.cc',
  'floor-edge.cc',
  'roof.cc',
  'desk.cc',
  'launcher_icons.cc',
  'icon-background.cc',
  'icon.cc',
  'jpeg-texture.cc',
  'png-texture.cc',
  'svg-texture.cc',
  'texture-factory.cc',
  'viewer.cc',
  'config.cc',
  'main.cc',

  shaders['landscape']['vert'],
  shaders['landscape']['frag'],
  shaders['icon']['vert'],
  shaders['icon']['frag'],
  shaders['color']['frag'],
  shaders['sky']['frag'],
  shaders['texture']['frag'],
  shaders['default']['vert'],
  shaders['floor']['vert'],
  shaders['floor']['frag'],
  shaders['gltf']['vert'],
  shaders['gltf_color']['frag'],
  shaders['gltf_texture']['frag'],
]

_dependencies = [
  zukou_dep,
  cairo_dep,
  jpeg_dep,
  png_dep,
  rsvg_dep,
  toml_dep,
]

executable(
  'zennist',
  _sources,
  install: true,
  cpp_args: ['-include', 'constants.h'],
  dependencies: _dependencies,
  include_directories: public_inc,
)
